# 7-ai-agent

./: .gitignore  ARCHITECTURE_OVERVIEW.md  DELIVERY_CHECKLIST.md  EXECUTION_REPORT.md  FINAL_COMPLETION_REPORT.md  INDEX.md  PROJECT_COMPLETION_PLAN.md  QUICK_START.md  README.md  SESSION_COMPLETION_SUMMARY.md  SETUP_ALL_PROJECTS.md  verify-setup.sh
blockchain-wallet-platform/: .env.example  COMPLETION_SUMMARY.md  Cargo.toml  DEMO_GUIDE.md  DEPLOYMENT.md  INDEX.md  README.md  START_HERE.md  build.sh  docker-compose.yml  health.sh  quickstart.sh  setup.sh  start-backend.sh  start-demo.sh  start-frontend.sh  test.sh
blockchain-wallet-platform/crates/auth/: Cargo.toml
blockchain-wallet-platform/crates/auth/src/: config.rs  handlers.rs  jwt.rs  main.rs  models.rs  oauth.rs  repository.rs  sessions.rs
blockchain-wallet-platform/crates/auth/tests/: auth_properties.rs
blockchain-wallet-platform/crates/autonomous-coder/: Cargo.toml
blockchain-wallet-platform/crates/autonomous-coder/src/: engine.rs  main.rs  models.rs
blockchain-wallet-platform/crates/autonomous-coder/tests/: autonomous_coder_properties.rs
blockchain-wallet-platform/crates/business-cards/: Cargo.toml
blockchain-wallet-platform/crates/business-cards/src/: main.rs  models.rs  store.rs
blockchain-wallet-platform/crates/business-cards/tests/: business_card_properties.rs
blockchain-wallet-platform/crates/chatbot/: Cargo.toml
blockchain-wallet-platform/crates/chatbot/src/: lib.rs  main.rs  models.rs  service.rs
blockchain-wallet-platform/crates/gateway/: Cargo.toml
blockchain-wallet-platform/crates/gateway/src/: config.rs  lib.rs  main.rs
blockchain-wallet-platform/crates/gateway/tests/: gateway_e2e.rs
blockchain-wallet-platform/crates/swap/: Cargo.toml
blockchain-wallet-platform/crates/swap/src/: lib.rs  main.rs  models.rs  service.rs
blockchain-wallet-platform/crates/transactions/: Cargo.toml
blockchain-wallet-platform/crates/transactions/src/: config.rs  lib.rs  main.rs  models.rs  repository.rs  simple_lib.rs  store.rs
blockchain-wallet-platform/crates/transactions/tests/: transaction_properties.rs
blockchain-wallet-platform/crates/wallet/: Cargo.toml
blockchain-wallet-platform/crates/wallet/src/: main.rs  models.rs  store.rs
blockchain-wallet-platform/crates/wallet/tests/: wallet_properties.rs
blockchain-wallet-platform/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts.timestamp-1768975995001-3810ca00d6b6a.mjs
blockchain-wallet-platform/frontend/src/: App.tsx  index.css
blockchain-wallet-platform/frontend/src/api/: index.ts
blockchain-wallet-platform/frontend/src/components/: ChatBot.tsx  Layout.tsx
blockchain-wallet-platform/frontend/src/pages/: Connect.tsx  Dashboard.tsx  Swap.tsx  Transactions.tsx
blockchain-wallet-platform/frontend/src/store/: index.ts
blockchain-wallet-platform/migrations/: 0001_create_users.sql  0002_create_transactions.sql
defi-automation-platform/: .env.example  requirements.txt  validate_implementation.py
defi-automation-platform/evaluation/: evaluate.py  evaluation_results.json  expected_responses.json  test_queries.json
defi-automation-platform/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
defi-automation-platform/frontend/src/: App.tsx  api.ts  index.css  store.ts
defi-automation-platform/src/agent_hub/: __init__.py  context_store.py  controller.py  message_bus.py  state_manager.py
defi-automation-platform/src/agents/: defi_strategist.py  portfolio_rebalancer.py  prediction_market_analyst.py  security_guardian.py  smart_wallet_manager.py  world_problem_solver.py
defi-automation-platform/src/ai/: __init__.py  conversational_ai.py  tracing.py
defi-automation-platform/src/analysis/: geopolitical_analyzer.py
defi-automation-platform/src/api/: websocket_routes.py
defi-automation-platform/tests/: test_agent_coordination.py  test_defi_strategy_optimization.py  test_learning_adaptation.py  test_natural_language_understanding.py  test_prediction_analysis.py  test_security_monitoring.py  test_social_impact_investment_recommendations.py  test_wallet_security.py  test_world_problem_solver.py
ideas/hooks/: api-contract-validation-hook.json  auto-fix-agent.json  autonomous-code-engineer.kiro.hook  blockchain-development-hook.json  build-test-agent.json  code-author-agent.json  code-review-hook.json  deep-research-hook.json  execution-audit-agent.kiro.hook  final-validator-agent.json  intent-router-agent.kiro.hook  knowledge-research-agent.kiro.hook  master-agent-hook.json  product-architect-agent.kiro.hook  qa-triage-hook.json  security-defi-validator.kiro.hook  security-hardening-agent.json  security-scan-hook.json  test-auto-fix-agent.kiro.hook
ideas/steering/: agent-coordination-steering.md  api-contract-steering.md  autonomous-coding-steering.md  blockchain-wallet-steering.md  deep-research-agent-steering.md  defi-safety-calculations-steering.md  multi-agent-autonomous-engineering-steering.md  policy-enforcement.md  production-compliance.md  qa-triage-agent-steering.md  researcher-agent-steering.md  security-validator-steering.md
multi-agent-autonomous-engineering/: .env.example  .eslintrc.js  .gitignore  IMPLEMENTATION_SUMMARY.md  PROPERTY_TEST_SUMMARY.md  README.md  WORKFLOW_ORCHESTRATION_SUMMARY.md  jest.config.js  package-lock.json  package.json  test-runner.js  tsconfig.json  tsconfig.test.json  validate-property-test.ts
multi-agent-autonomous-engineering/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
multi-agent-autonomous-engineering/src/: index.ts
multi-agent-autonomous-engineering/tests/: integration.test.ts  setup.ts  system.test.ts
(+93 files in other folders)
