[workspace]
resolver = "2"
members = [
  "crates/auth",
  "crates/wallet",
  "crates/transactions",
  "crates/business-cards",
  "crates/autonomous-coder",
  "crates/gateway",
  "crates/swap",
  "crates/chatbot"
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
config = "0.14"
async-trait = "0.1"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
redis = { version = "0.25", features = ["tokio-comp"] }
jsonwebtoken = "9"
oauth2 = "4"
web3 = "0.19"
secp256k1 = { version = "0.29", features = ["rand"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

ipfs-api-backend-hyper = "0.6"
