[package]
name = "auth"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
async-trait = { workspace = true }

sqlx = { workspace = true }
redis = { workspace = true }
oauth2 = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = "1"
tokio = { workspace = true }
