[package]
name = "gateway"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
http = "1"

[dev-dependencies]
httpmock = "0.7"
tower = { version = "0.4", features = ["util"] }
