[package]
name = "swap-service"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true
async-trait.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "swap-service"
path = "src/main.rs"
