[package]
name = "transactions"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
async-trait = { workspace = true }

sqlx = { workspace = true }
web3 = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = "1"
tokio = { workspace = true }
tokio-test = "0.4"
